# MTECH_obstacle_avoidance_robot

./: .gitignore  README_robot_operation.md  ReadMe.md  backward_ril.py  forward_RIL.py  frames.gv  nex_robot_odom_trans.py  run.launch  teleop.launch  testing.py
src/: CMakeLists.txt  ReadMe.txt
src/control/: CMakeLists.txt  ReadMe.md  package.xml
src/control/config/: ekf_config.yaml
src/control/include/: 0xDelta.hpp  inertial_control_api.hpp  miscellaneous_api.hpp  motor_control_api.hpp  nex_robot.hpp  power_management_api.hpp  robotic_arms_control_api.hpp  ros_callbacks.hpp  sensor_module_api.hpp  servo_pods_api.hpp  user_defined_functions.hpp  utils.hpp
src/control/launch/: control.launch
src/control/src/: control.cpp  main.cpp
src/control_ros_node/: CMakeLists.txt  package.xml
src/control_ros_node/include/: nex_robot.hpp  user_defined_functions.hpp
src/control_ros_node/launch/: control_ros_node.launch
src/control_ros_node/src/: main.cpp
src/control_stack/: CMakeLists.txt  ReadMe.txt  Reference.txt  package.xml
src/control_stack/include/: control.h  robot.h  robot_macros.h
src/control_stack/launch/: control_stack.launch
src/control_stack/scripts/: create_udev_rules.sh  delete_udev_rules.sh  plot_path.py  robot.rules
src/control_stack/src/: hello_world.cpp  main.cpp  publisher_node.cpp  reference.cpp  robot.cpp  subscriber_node.cpp
src/delta_control/: CMakeLists.txt  package.xml
src/delta_control/config/: control.yaml  robot_localization.yaml  twist_mux.yaml
src/delta_control/launch/: control.launch
src/delta_description/: CMakeLists.txt  package.xml
src/delta_description/launch/: view_robot.launch
src/delta_description/meshes/: 0xDelta_003.dae  wheel.dae
src/delta_description/rviz/: gmapping.rviz  localization.rviz  model.rviz  navigation.rviz  robot.rviz
src/delta_description/urdf/: delta.gazebo  delta.urdf.xacro
src/delta_gazebo/: CMakeLists.txt  package.xml
src/delta_gazebo/launch/: delta_obstacle.launch  delta_world.launch
src/delta_gazebo/worlds/: obstacle_demo_world.world
src/delta_navigation/: CMakeLists.txt  package.xml
src/delta_navigation/launch/: amcl_demo.launch  gmapping_demo.launch  odom_navigation_demo.launch
src/delta_navigation/launch/include/: amcl.launch  gmapping.launch  move_base.launch
src/delta_navigation/maps/: map_1.pgm  map_1.yaml  map_2.pgm  map_2.yaml  map_3.pgm  map_3.yaml
src/delta_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
src/delta_navigation/params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
src/delta_navigation/params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
src/delta_obstacle_avoidance/: CMakeLists.txt  package.xml
src/delta_obstacle_avoidance/include/: delta_drive.h
src/delta_obstacle_avoidance/launch/: delta_sim_obstacle.launch
src/delta_obstacle_avoidance/src/: delta_drive.cpp
src/fuzzy/: CMakeLists.txt  Testing.txt  package.xml
src/fuzzy/config/: fuzzy_params.yaml
src/fuzzy/launch/: fuzzy.launch
src/fuzzy/scripts/: fuzzy_node.py
src/gmpc_controller/: CMakeLists.txt  ReadMe.md  package.xml  readMe.txt
src/gmpc_controller/launch/: gmpc.launch
src/gmpc_controller/scripts/: plot_actual_path.py
src/gmpc_controller/src/: gmpc_controller.cpp
src/imu/: CMakeLists.txt  package.xml
src/imu/launch/: imu.launch
src/imu/src/: imu.cpp
src/map_manager/cfg/: occupancy_map_param.yaml
src/map_manager/launch/: occupancy_map.launch
src/navigation_stack/: CMakeLists.txt  package.xml  requirements.txt
src/navigation_stack/scripts/: Navigation.py
src/nex_delta_description/: CMakeLists.txt  package.xml
src/nex_delta_description/launch/: nex_delta_world.launch
src/nex_delta_description/meshes/sensors/: rplidar.stl
src/nex_delta_description/urdf/: nex_delta.gazebo  nex_delta.urdf.xacro
src/nex_delta_description/worlds/: robot_world.world
src/nex_robot/: CMakeLists.txt  package.xml
src/nex_robot/cfg/: config.yaml
src/nex_robot/launch/: nex_robot.launch
src/nex_robot/scripts/: nex_robot_node.py
src/realsense_node/: CMakeLists.txt  ReadMe.md  package.xml
src/realsense_node/launch/: realsense_publisher.launch
src/realsense_node/src/: realsense_publisher.py
src/reference_package/: CMakeLists.txt  package.xml
src/simulations/: CMakeLists.txt  ReadMe.md  package.xml
src/simulations/Tests/RIL_lab/x_y graph/: Plot Name-turtlebot3_burger:world_pose_position_x.csv  Plot Name-turtlebot3_burger_world_pose_position_x.csv  Plot Name-turtlebot3_burger_world_pose_position_y.csv
src/simulations/config/: config.yaml
src/simulations/launch/: nex.launch  python_scripts.launch  rviz.launch  turtlebot3_world.launch
src/simulations/plots/: generate_plots.py  obstacles.txt
src/simulations/plots/record_20250405_152232/: record_20250405_152232.csv
src/simulations/plots/record_20250405_175607/: record_20250405_175607.csv
src/simulations/rviz/: path.rviz
src/simulations/scripts/: Navigation.py  Plots.py  plot_actual_path.py
src/simulations/worlds/: RIL.world
