<?xml version="1.0"?>
<package>
  <name>delta_description</name>
  <version>0.0.0</version>
  <description>URDF robot description for Delta robot</description>

  <maintainer email="tusharchaskar.nex@gmail.com">tushar</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>pointgrey_camera_description</run_depend>

  <export>
  </export>
</package>
